finally fixed side spacing issue

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   color: #ebebeb;
   font-family:'PT Sans', sans-serif;
   font-size: large;
+  margin: 0;
   overflow-x: hidden;
-  margin: 0
 }
 
 header {
@@ -52,7 +52,7 @@ footer {
   padding: 10px;
   text-align: center;
   font-size: medium;
-  width: 100%;
+  width: 90%;
 } 
 
 .header-text, 
@@ -300,6 +300,12 @@ footer {
 #github {
   width: 25px;
 }
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
 
 @media only screen and (max-width: 650px) {
 
